[gd_scene load_steps=4 format=3 uid="uid://cm226s4xft3ig"]

[ext_resource type="Texture2D" uid="uid://cdoa2mycrf6vg" path="res://assets/apocalypse/Objects/Vehicles/Overgrown/Car_1_Overgrown/Dark-Green/Car_1_Overgrown_Dark-Green_Yellow.png" id="1_0xs2d"]
[ext_resource type="Script" uid="uid://dng8n4k58d0h" path="res://scenes/objects/spawn_1.gd" id="1_uej12"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uej12"]
size = Vector2(19, 37)

[node name="Spawn1" type="StaticBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_uej12")

[node name="Car1OvergrownDark-greenYellow" type="Sprite2D" parent="."]
texture = ExtResource("1_0xs2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_uej12")

[node name="SpawnMarker" type="Marker2D" parent="."]
position = Vector2(0, 23)

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
